--- a/readthedocs.yml
+++ b/readthedocs.yml
@@ -1,7 +1,13 @@
+version: 2
+
+build:
+  os: "ubuntu-22.04"
+  tools:
+    python: "3.7"
+
 python:
-    version: 3
-    # only use the packages specified in setup.py
-    use_system_site_packages: false
-    pip_install: true
-    extra_requirements:
-        - doc
+    install:
+        - method: pip
+          path: .
+          extra_requirements:
+              - doc
