--- a/readthedocs.yml
+++ b/readthedocs.yml
@@ -1,7 +1,23 @@
+# .readthedocs.yaml
+# Read the Docs configuration file
+# See https://docs.readthedocs.io/en/stable/config-file/v2.html for details
+
+# Required
+version: 2
+
+build:
+   os: ubuntu-22.04
+   tools:
+     python: "3.8"
+   jobs:
+     # fetch the full history so that setuptools_scm can determine the
+     # correct version string for long PRs with many commits
+     post_checkout:
+       - git fetch --unshallow
+
 python:
-    version: 3
-    # only use the packages specified in setup.py
-    use_system_site_packages: false
-    pip_install: true
-    extra_requirements:
-        - doc
+    install:
+      - method: pip
+        path: .
+        extra_requirements:
+          - doc
