--- a/readthedocs.yml
+++ b/readthedocs.yml
@@ -3,11 +3,12 @@ version: 2
 build:
   os: "ubuntu-22.04"
   tools:
-    python: "3.7"
+    python: "3.11"
 
-python:
-    install:
-        - method: pip
-          path: .
-          extra_requirements:
-              - doc
+sphinx:
+    configuration: docs/sphinx/conf.py
+    python:
+        install:
+            - method: pip
+              extra_requirements:
+                  - doc
