MAINT: clean up - dropped 3.7 & new pyproject.toml file

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,2 +1,4 @@
+# cannot officially get rid of this file yet
+# https://github.com/pypa/setuptools/issues/3341
 include versioneer.py
 include pvfactors/_version.py
