--- a/readthedocs.yml
+++ b/readthedocs.yml
@@ -1,9 +1,12 @@
 version: 2
 
+sphinx:
+  configuration: docs/sphinx/conf.py
+
 build:
   os: "ubuntu-22.04"
   tools:
-    python: "3.7"
+    python: "3.8"
 
 python:
     install:
