--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,7 +25,7 @@ classifiers = [
 ]
 dependencies = [
     "pvlib>=0.9.0",
-    "shapely>=1.6.4.post2,<2",
+    "shapely>=2.0",
     "matplotlib",
     "future",
     "six",
@@ -39,7 +39,7 @@ test = [
     "mock",
 ]
 doc = [
-    "Sphinx~=4.0",
+    "sphinx",
     "sphinx_rtd_theme",
     "nbsphinx",
     "sphinxcontrib_github_alt",
