--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ classifiers = [
     "Programming Language :: Python :: 3.11",
     "Topic :: Scientific/Engineering",
 ]
+requires-python = ">=3.8"
 dependencies = [
     "pvlib>=0.9.0",
     "shapely>=2.0",
