--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -46,7 +46,7 @@ jobs:
         pip install $(find dist -type f -name "*.whl") --target=./tmp
 
     - name: List installed file sizes
-      run: du -h solarfactors
+      run: du -h pvfactors
       working-directory: ./tmp
 
     - name: Store the distribution packages
